# robo-architect

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  VALIDATION_RESULT.md  check_gwt_conditions.cypher  check_gwt_conditions.sh  check_gwt_summary.cypher  dev.sh  pyproject.toml
api/: main.py
deploy/: pdf2bpmn-api.yaml  (+2 more)
robo-agile-facilitator/: .env.example  PRD.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  turnserver.conf
robo-agile-facilitator/api/: config.py  main.py
robo-agile-facilitator/api/app/: config.py  main.py
robo-agile-facilitator/api/app/features/event_storming/: http_api.py
robo-agile-facilitator/api/app/platform/observability/: request_logging.py
robo-agile-facilitator/api/features/: __init__.py
robo-agile-facilitator/api/features/ai_facilitator/: __init__.py  facilitator.py  realtime_api.py
robo-agile-facilitator/api/features/event_storming/: export_api.py  graph_store.py  http_api.py
robo-agile-facilitator/api/features/workshop_realtime/: canvas_handlers.py  presence_store.py  server.py  video_signaling.py
robo-agile-facilitator/api/platform/observability/: request_logging.py  smart_logger.py
robo-agile-facilitator/backend/app/: __init__.py  config.py  main.py
robo-agile-facilitator/backend/app/ai/: __init__.py  facilitator.py
robo-agile-facilitator/backend/app/api/: __init__.py  export.py  realtime.py  sessions.py
robo-agile-facilitator/backend/app/db/: __init__.py  neo4j.py  redis.py
robo-agile-facilitator/backend/app/features/ai_facilitator/: facilitator.py  realtime_api.py
robo-agile-facilitator/backend/app/features/event_storming/: __init__.py  export_api.py  graph_store.py  http_api.py  models.py
robo-agile-facilitator/backend/app/features/workshop_realtime/: __init__.py  canvas_handlers.py  presence_store.py  video_signaling.py
robo-agile-facilitator/backend/app/models/: __init__.py  session.py
robo-agile-facilitator/backend/app/platform/observability/: smart_logger.py
robo-agile-facilitator/backend/app/websocket/: __init__.py  canvas.py  signaling.py
robo-agile-facilitator/frontend/: package-lock.json  package.json  vite.config.ts
robo-agile-facilitator/frontend/src/: App.vue  style.css
robo-agile-facilitator/frontend/src/components/ai/: AIFeedbackPanel.vue
robo-agile-facilitator/frontend/src/components/canvas/: CanvasBoard.vue  StickerPalette.vue
robo-agile-facilitator/frontend/src/components/session/: ExportModal.vue  HeaderTimer.vue  ParticipantList.vue  PhaseIndicator.vue  WorkshopTimer.vue
robo-agile-facilitator/frontend/src/components/video/: VideoPanel.vue
robo-agile-facilitator/frontend/src/composables/: useRealtimeAI.ts
robo-agile-facilitator/frontend/src/router/: index.ts
robo-agile-facilitator/frontend/src/stores/: session.ts  video.ts
robo-agile-facilitator/frontend/src/views/: HomeView.vue  SessionView.vue
robo-architect/: .env.example  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run_dev.sh
robo-architect/api/: main.py
robo-architect/api/features/: __init__.py
robo-architect/api/features/canvas_graph/: __init__.py  router.py
robo-architect/api/features/canvas_graph/routes/: __init__.py  bigpicture_timeline.py  canvas_event_triggers.py  canvas_expansion.py  canvas_relationships.py  canvas_subgraph.py  graph_maintenance.py
robo-architect/api/features/change_management/planning_agent/: change_planner.py  change_planning_api.py  change_planning_contracts.py  change_planning_graph.py  change_planning_runtime.py  graph_routes.py  impact_propagation_engine.py  impact_propagation_neo4j_context.py  impact_propagation_settings.py  plan_finalizer.py  plan_revision.py  scope_analysis.py
robo-architect/api/features/change_management/routes/: __init__.py  change_apply.py  change_history.py  change_planning.py  related_object_search.py
robo-architect/api/features/contexts/: router.py
robo-architect/api/features/ingestion/: ingestion_contracts.py  ingestion_llm_runtime.py  ingestion_sessions.py  ingestion_workflow_runner.py  langchain_cache.py  requirements_to_user_stories.py  router.py
robo-architect/api/features/ingestion/event_storming/: cli.py  graph.py  neo4j_client.py  node_runtime.py  nodes.py  nodes_aggregates.py  nodes_bounded_contexts.py  nodes_breakdown.py  nodes_commands.py  nodes_events.py  nodes_persist.py  nodes_policies.py  nodes_routing.py  prompts.py  state.py  structured_outputs.py
robo-architect/api/features/ingestion/workflow/: ingestion_workflow_context.py
robo-architect/api/features/model_modifier/: chat_contracts.py  chat_runtime_settings.py  model_change_application.py  react_prompt.py  react_sections.py  react_streaming.py  router.py
robo-architect/api/features/model_modifier/routes/: chat_confirm.py  chat_impact_details.py  chat_modify.py
robo-architect/api/features/prd_generation/: prd_api_contracts.py  prd_model_data.py  prd_tech_stack_catalog.py  router.py
robo-architect/api/features/prd_generation/routes/: __init__.py  tech_stacks.py
robo-architect/api/features/readmodel_cqrs/: __init__.py  router.py
robo-architect/api/features/user_stories/: __init__.py  authoring_router.py  catalog_router.py
robo-architect/api/features/user_stories/planning_agent/: user_story_graph.py  user_story_planning_nodes.py  user_story_planning_runtime.py
robo-architect/api/platform/: env.py  llm.py  neo4j.py
robo-architect/api/platform/observability/: request_logging.py  smart_logger.py
robo-architect/docs/: PRD.md  PRD_frontend.md
robo-architect/docs/cypher/: impact_analysis.cypher
robo-architect/docs/cypher/schema/: 01_constraints.cypher  02_indexes.cypher  03_node_types.cypher  04_relationships.cypher
robo-architect/frontend/: package-lock.json  vite.config.js
robo-architect/frontend/src/: App.vue  main.js
robo-architect/frontend/src/app/layout/: TopBar.vue
robo-architect/frontend/src/app/logging/: logger.js
robo-architect/frontend/src/app/styles/: main.css
robo-architect/frontend/src/features/canvas/: bigpicture.store.js  canvas.store.js
specs/: README.md  (+2 more)
(+1497 files in other folders)
