[project]
name = "msaez2"
version = "0.1.0"
description = "Ontology-driven Event Storming & Impact Analysis Engine with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "MSAez Team" }
]

dependencies = [
    # Neo4j Driver
    "neo4j>=5.0.0",
    
    # LangChain & LangGraph
    "langchain>=0.3.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "deepagents>=0.1.0",

    # FastAPI (for future API server)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",

    # Optional (used by ingestion when uploading PDFs)
    "PyMuPDF>=1.23.0",

    # Tokenizer fallback for the ingestion token counter (spec 017).
    # Used only when LangChain's standardized usage_metadata is absent
    # (e.g. older provider adapters or self-hosted models).
    "tiktoken>=0.7.0",

    # DDD-for-SDD artifact generation (spec 022).
    # Jinja2: markdown templates for the article-format DDD artifacts.
    # python-slugify: ASCII-safe slugs from Korean BC / Aggregate names.
    "Jinja2>=3.1.0",
    "python-slugify>=8.0.0",

    # Robo-Spec MCP bridge (spec 029).
    # mcp: official Anthropic Python SDK — mounted in-process at /mcp.
    # watchfiles: backend file-watcher over <workspace>/specs/**/tasks.md
    # for the Design-tab progress reflection channel.
    "mcp>=1.0.0",
    "watchfiles>=0.24.0",

    # Claude Code terminal PTY backend on Windows (Code tab).
    # POSIX hosts use the stdlib `pty`/`fcntl`/`termios` modules; Windows
    # has no equivalent, so we drive ConPTY through pywinpty. The wheel is
    # prebuilt (no compiler needed) and the marker keeps it off Linux/macOS
    # installs entirely. See api/features/claude_code/pty_backend.py.
    "pywinpty>=2.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
msaez = "agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "[0-9][0-9][0-9]_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

